--- a/edit_roster_tournament_stats.html
+++ b/edit_roster_tournament_stats.html
@@ -39,12 +39,32 @@
               </div>
             </div>
           </li>
-          <li>
+          <li id="li-edit-roster-fouls">
             <div class="item-content">
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-fouls" class="item-title label"></div>
                 <div class="item-input">
                   <input id="edit-roster-fouls" type="number" placeholder="Fouls" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-edit-roster-yellowcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-roster-statistics-yellowcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="edit-roster-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-edit-roster-redcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-roster-statistics-redcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="edit-roster-redcard" type="number" placeholder="Red Card" value=""/>
                 </div>
               </div>
             </div>
