--- a/edit_tournament_stats.html
+++ b/edit_tournament_stats.html
@@ -35,12 +35,32 @@
               </div>
             </div>
           </li>
-          <li>
+          <li id="li-team-fouls">
             <div class="item-content">
               <div class="item-inner"> 
                 <div id="lbl-edit-team-fouls" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-team-fouls" type="number" placeholder="Fouls" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-team-yellowcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-team-yellowcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="txt-edit-team-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-team-redcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-team-redcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="txt-edit-team-redcard" type="number" placeholder="Red Card" value=""/>
                 </div>
               </div>
             </div>
@@ -70,12 +90,32 @@
               </div>
             </div>
           </li>
-          <li>
+          <li id="li-opp-fouls">
             <div class="item-content">
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-fouls" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-opponent-fouls" type="number" placeholder="Fouls" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-opp-yellowcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-opp-yellowcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="txt-edit-opponent-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li id="li-opp-redcard">
+            <div class="item-content">
+              <div class="item-inner"> 
+                <div id="lbl-edit-opp-redcard" class="item-title label"></div>
+                <div class="item-input">
+                  <input id="txt-edit-opponent-redcard" type="number" placeholder="Red Card" value=""/>
                 </div>
               </div>
             </div>
