--- a/roster_detail.html
+++ b/roster_detail.html
@@ -22,7 +22,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">PPG</div>
+                  <div id="lbl-roster-det-score" class="item-title"></div>
                   <div id="roster-ppg" class="item-after"></div>
                 </div>
               </div>
@@ -30,16 +30,32 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">APG</div>
+                  <div id="lbl-roster-det-assists" class="item-title"></div>
                   <div id="roster-apg" class="item-after"></div>
                 </div>
               </div>
             </li>
-            <li>
+            <li id="li-roster-det-fouls">
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">FPG</div>
+                  <div id="lbl-roster-det-fouls" class="item-title"></div>
                   <div id="roster-fpg" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-roster-det-yellowcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-det-yellowcard" class="item-title"></div>
+                  <div id="roster-yellowcard" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-roster-det-redcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-det-redcard" class="item-title"></div>
+                  <div id="roster-redcard" class="item-after"></div>
                 </div>
               </div>
             </li>
