--- a/roster_tournament_stats.html
+++ b/roster_tournament_stats.html
@@ -35,11 +35,27 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li id="li-roster-fouls">
               <div class="item-content">
                 <div class="item-inner"> 
                   <div id="lbl-roster-tournament-fouls" class="item-title"></div>
                   <div id="roster-fouls" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-roster-yellowcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-tournament-yellowcard" class="item-title"></div>
+                  <div id="roster-yellowcard" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-roster-redcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-tournament-redcard" class="item-title"></div>
+                  <div id="roster-redcard" class="item-after"></div>
                 </div>
               </div>
             </li>
