--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -104,14 +104,32 @@
                       <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="opponent-assists"></p>
                       </div>
-                      <div class="col-40" style="padding:0px; margin:0px;">
+                      <div class="col-40 col-team-fouls" style="padding:0px; margin:0px;">
                         <p id="team-fouls"></p>
                       </div>
-                      <div class="col-20" style="padding:0px; margin:0px;">
+                      <div class="col-20 col-team-fouls" style="padding:0px; margin:0px;">
                         <p><b id="lbl-tournament-detail-foul"></b></p>
                       </div>
-                      <div class="col-40" style="padding:0px; margin:0px;">
+                      <div class="col-40 col-team-fouls" style="padding:0px; margin:0px;">
                         <p id="opponent-fouls"></p>
+                      </div>
+                      <div class="col-40 col-yellowcard" style="padding:0px; margin:0px;">
+                        <p id="team-yellowcard"></p>
+                      </div>
+                      <div class="col-20 col-yellowcard" style="padding:0px; margin:0px;">
+                        <p><b id="lbl-tournament-detail-yellowcard"></b></p>
+                      </div>
+                      <div class="col-40 col-yellowcard" style="padding:0px; margin:0px;">
+                        <p id="opponent-yellowcard"></p>
+                      </div>
+                      <div class="col-40 col-redcard" style="padding:0px; margin:0px;">
+                        <p id="team-redcard"></p>
+                      </div>
+                      <div class="col-20 col-redcard" style="padding:0px; margin:0px;">
+                        <p><b id="lbl-tournament-detail-redcard"></b></p>
+                      </div>
+                      <div class="col-40 col-redcard" style="padding:0px; margin:0px;">
+                        <p id="opponent-redcard"></p>
                       </div>
                     </div>
                   </div>
