--- a/team_stats.html
+++ b/team_stats.html
@@ -18,7 +18,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">PPG</div>
+                  <div id="lbl-team-stats-points" class="item-title"></div>
                   <div id="team-ppg" class="item-after"></div>
                 </div>
               </div>
@@ -26,16 +26,32 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">APG</div>
+                  <div id="lbl-team-stats-assists" class="item-title"></div>
                   <div id="team-apg" class="item-after"></div>
                 </div>
               </div>
             </li>
-            <li>
+            <li id="li-team-stats-fouls">
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">FPG</div>
+                  <div id="lbl-team-stats-fouls" class="item-title"></div>
                   <div id="team-fpg" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-team-stats-yellowcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-team-stats-yellowcard" class="item-title"></div>
+                  <div id="team-yellowcard" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-team-stats-redcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-team-stats-redcard" class="item-title"></div>
+                  <div id="team-redcard" class="item-after"></div>
                 </div>
               </div>
             </li>
