--- a/roster_list.html
+++ b/roster_list.html
@@ -11,7 +11,7 @@
         </div>
       </div>
     </div>
-    <a href="roster_add.html" id="btn-show-add-roster" class="floating-button color-pink"><i class="icon icon-plus"></i></a>
+    <a href="roster_add.html" id="btn-show-add-roster" class="floating-button color-pink" style="margin-bottom:43px;"><i class="icon icon-plus"></i></a>
     <form data-search-list=".virtual-list" class="searchbar searchbar-init">
       <div class="searchbar-input">
         <input type="search" placeholder="Search"/><a href="#" class="searchbar-clear"></a>
@@ -29,6 +29,16 @@
           </li>
         </ul>
       </div>
+    </div>
+    <div class="toolbar toolbar-bottom">
+      <div class="toolbar-inner">
+        <a href="roster_list.html" class="link"><i class="fa fa-users fa-lg" aria-hidden="true"></i>
+</a>
+        <a id="link_index" href="tournament_list.html" class="link"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
+</a>
+        <a href="team_stats.html" class="link"><i class="fa fa-line-chart fa-lg" aria-hidden="true"></i>
+</a>
+      </div>    
     </div>
     </div>
   </div>
