--- a/team_management.html
+++ b/team_management.html
@@ -30,6 +30,17 @@
         </div>
       </div>
     </div>
+    <div class="toolbar toolbar-bottom">
+      <div class="toolbar-inner">
+        <a href="roster_list.html" class="link"><i class="fa fa-users fa-lg" aria-hidden="true"></i>
+</a>
+        <a id="link_index" href="tournament_list.html" class="link"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
+</a>
+        <a href="team_stats.html" class="link"><i class="fa fa-line-chart fa-lg" aria-hidden="true"></i>
+</a>
+      </div>    
+    </div>
+    </div>
     </div>
   </div>
 </div>
