--- a/team_stats.html
+++ b/team_stats.html
@@ -2,7 +2,7 @@
   <div data-page="team-stats" class="page navbar-fixed toolbar-fixed">
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
-        <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+        <div class="left"><a href="team_management.html" class="back link icon-only"><i class="icon icon-back"></i></a></div>
         <div id="lbl-team-stats" class="center"></div>
         <div class="right">
         </div>
@@ -57,6 +57,16 @@
             </li>
           </ul>
         </div> 
+    </div>
+    <div class="toolbar toolbar-bottom">
+      <div class="toolbar-inner">
+        <a href="roster_list.html" class="link"><i class="fa fa-users fa-lg" aria-hidden="true"></i>
+</a>
+        <a id="link_index" href="tournament_list.html" class="link"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
+</a>
+        <a href="team_stats.html" class="link"><i class="fa fa-line-chart fa-lg" aria-hidden="true"></i>
+</a>
+      </div>    
     </div>
   </div>
 </div>
