--- a/team_stats.html
+++ b/team_stats.html
@@ -2,7 +2,7 @@
   <div data-page="team-stats" class="page navbar-fixed toolbar-fixed">
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
-        <div class="left"><a href="team_management.html" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+        <div class="left"><a href="team_management.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
         <div id="lbl-team-stats" class="center"></div>
         <div class="right">
         </div>
