--- a/voting_result.html
+++ b/voting_result.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">MVP Result</div>
+        <div id="lbl-mvp-result" class="center"></div>
         <div class="right">
           <a href="#" class="link icon-only popop-voting-result"><i class="fa fa-share" aria-hidden="true"></i></a>
         </div>
@@ -11,41 +11,57 @@
     </div>
     <div class="page-content" style="padding-top:56px;">
       <div style="width:100%; background-color:#34495E; padding-top:25px; padding-bottom:5px;">
-        <img id="roster-detail-image" src="http://meanstars.com/profile/134.jpg" class="img-circle fit center" style="width:120px; height: 120px;" />
-        <center><p id="roster-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;">Patrick Santos</p></center>
-        <center><p id="roster-detail-position" style="color:white; margin-top:0px;">vs Cleveland Cavaliers</p></center>
+        <img id="img-mvp-image" src="img/profile.jpg" class="img-circle fit center" style="width:120px; height: 120px;" />
+        <center><p id="mvp-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
+        <center><p id="mvp-opponent" style="color:white; margin-top:0px;"></p></center>
       </div>
       <div class="list-block">
           <ul>
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Votes</div>
-                  <div id="roster-ppg" class="item-after">120</div>
+                  <div id="lbl-mvp-votes" class="item-title"></div>
+                  <div id="mvp-votes" class="item-after"></div>
                 </div>
               </div>
             </li>
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Points</div>
-                  <div id="roster-ppg" class="item-after">24</div>
+                  <div id="lbl-mvp-points" class="item-title"></div>
+                  <div id="mvp-points" class="item-after"></div>
                 </div>
               </div>
             </li>
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Assist</div>
-                  <div id="roster-apg" class="item-after">8</div>
+                  <div id="lbl-mvp-assists" class="item-title"></div>
+                  <div id="mvp-assists" class="item-after"></div>
                 </div>
               </div>
             </li>
-            <li>
+            <li id="li-mvp-fouls">
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Fouls</div>
-                  <div id="roster-fpg" class="item-after">3</div>
+                  <div id="lbl-mvp-fouls" class="item-title"></div>
+                  <div id="mvp-fouls" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-mvp-yellowcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-mvp-yellowcard" class="item-title"></div>
+                  <div id="mvp-yellowcard" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li id="li-mvp-redcard">
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-mvp-redcard" class="item-title"></div>
+                  <div id="mvp-redcard" class="item-after"></div>
                 </div>
               </div>
             </li>
