--- a/voting_result.html
+++ b/voting_result.html
@@ -2,7 +2,7 @@
   <div data-page="voting-result" class="page navbar-fixed toolbar-fixed">
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
-        <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+        <div class="left"><a id="btn-back-tour-det" href="#" class="link icon-only"><i class="icon icon-back"></i></a></div>
         <div id="lbl-mvp-result" class="center"></div>
         <div class="right">
           <a href="#" class="link icon-only popop-voting-result"><i class="fa fa-share" aria-hidden="true"></i></a>
