--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -34,10 +34,12 @@
         </div>
       </div>
       <div class="navbar-inner">
-        <div class="left" style="padding-bottom:150px;"><a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
+        <div class="left" style="padding-bottom:150px;">
+          <a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a>
+        </div>
         <div id="tournament-name" class="center" style="padding-top:150px;"></div>
-        <div class="right">
-          <a href="#" style="padding-bottom:150px;" class="link  icon-only popop-tournament-options"><i class="icon icon-bars"></i></a>
+        <div class="right" style="padding-bottom:150px;">
+          <a href="#" class="link  icon-only popop-tournament-options"><i class="icon icon-bars"></i></a>
         </div>
       </div>
     </div>
