--- a/edit_roster_tournament_stats.html
+++ b/edit_roster_tournament_stats.html
@@ -24,7 +24,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-points" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="edit-roster-points" type="number" placeholder="Points" value=""/>
+                  <input id="edit-roster-points" type="number" placeholder="Points" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -34,7 +34,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-assists" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="edit-roster-assists" type="number" placeholder="Assists" value=""/>
+                  <input id="edit-roster-assists" type="number" placeholder="Assists" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -44,7 +44,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-fouls" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="edit-roster-fouls" type="number" placeholder="Fouls" value=""/>
+                  <input id="edit-roster-fouls" type="number" placeholder="Fouls" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -54,7 +54,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-yellowcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="edit-roster-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                  <input id="edit-roster-yellowcard" type="number" placeholder="Yellow Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -64,7 +64,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-roster-statistics-redcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="edit-roster-redcard" type="number" placeholder="Red Card" value=""/>
+                  <input id="edit-roster-redcard" type="number" placeholder="Red Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
