--- a/edit_tournament_stats.html
+++ b/edit_tournament_stats.html
@@ -20,7 +20,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-team-points" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-team-points" type="number" placeholder="Points" value=""/>
+                  <input id="txt-edit-team-points" type="number" placeholder="Points" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -30,7 +30,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-team-assists" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-team-assists" type="number" placeholder="Assists" value=""/>
+                  <input id="txt-edit-team-assists" type="number" placeholder="Assists" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -40,7 +40,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-team-fouls" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-team-fouls" type="number" placeholder="Fouls" value=""/>
+                  <input id="txt-edit-team-fouls" type="number" placeholder="Fouls" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -50,7 +50,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-team-yellowcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-team-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                  <input id="txt-edit-team-yellowcard" type="number" placeholder="Yellow Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-team-redcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-team-redcard" type="number" placeholder="Red Card" value=""/>
+                  <input id="txt-edit-team-redcard" type="number" placeholder="Red Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-points" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-opponent-points" type="number" placeholder="Points" value=""/>
+                  <input id="txt-edit-opponent-points" type="number" placeholder="Points" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -85,7 +85,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-assists" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-opponent-assists" type="number" placeholder="Assists" value=""/>
+                  <input id="txt-edit-opponent-assists" type="number" placeholder="Assists" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-fouls" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-opponent-fouls" type="number" placeholder="Fouls" value=""/>
+                  <input id="txt-edit-opponent-fouls" type="number" placeholder="Fouls" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-yellowcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-opponent-yellowcard" type="number" placeholder="Yellow Card" value=""/>
+                  <input id="txt-edit-opponent-yellowcard" type="number" placeholder="Yellow Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
@@ -115,7 +115,7 @@
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-redcard" class="item-title label"></div>
                 <div class="item-input">
-                  <input id="txt-edit-opponent-redcard" type="number" placeholder="Red Card" value=""/>
+                  <input id="txt-edit-opponent-redcard" type="number" placeholder="Red Card" onfocus="this.value = this.value;" value=""/>
                 </div>
               </div>
             </div>
