--- a/main.html
+++ b/main.html
@@ -56,6 +56,13 @@
               <li>
                 <div class="item-content">
                   <div class="item-inner"> 
+                    <div class="item-title"><a id="btn-inbox" href="inbox.html" class="link icon-only"></a></div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="item-content">
+                  <div class="item-inner"> 
                     <div class="item-title"><a id="btn-choose-language" href="#" onClick="chooseLanguage();" class="link icon-only"></a></div>
                   </div>
                 </div>
