--- a/main.html
+++ b/main.html
@@ -57,6 +57,7 @@
                 <div class="item-content">
                   <div class="item-inner"> 
                     <div class="item-title"><a id="btn-inbox" href="inbox.html" class="link icon-only"></a></div>
+                    <div id="div-inbox-badge" class="item-after"></div>
                   </div>
                 </div>
               </li>
