--- a/team_management.html
+++ b/team_management.html
@@ -9,6 +9,9 @@
         <!-- <div class="right"></div> -->
         <div class="right">
           <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+          <a href="team_edit.html" id="btn-edit-team-detail" class="link icon-only">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+          </a>
           <a href="#" id="open-right-panel" data-panel="right" class="link icon-only"><i class="icon icon-bars"></i></a>
         </div>
       </div>
