--- a/tournament_add.html
+++ b/tournament_add.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
+          <a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
         <div id="lbl-add-tournament" class="center"></div>
         <div class="right"></div>
