--- a/tournament_list.html
+++ b/tournament_list.html
@@ -8,6 +8,7 @@
         <div id="lbl-tournament-list" class="center"></div>
         <div class="right">
           <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
+          <a id="btn-tournament-list-refresh" href="#" class="link icon-only"><i class="fa fa-refresh" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
