--- a/roster_list.html
+++ b/roster_list.html
@@ -20,7 +20,7 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-      <div class="list-block virtual-list searchbar-found"></div>
+      <div class="list-block media-list virtual-list searchbar-found"></div>
       <div class="list-block searchbar-not-found">
         <ul>
           <li class="item-content">
