--- a/fines_list.html
+++ b/fines_list.html
@@ -1,18 +1,17 @@
 <div class="pages">
-  <div data-page="roster-list" class="page navbar-fixed toolbar-fixed" >
+  <div data-page="fines-list" class="page navbar-fixed toolbar-fixed" >
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
           <a href="team_management.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div id="lbl-roster-list" class="center"></div>
+        <div id="lbl-fines-list" class="center"></div>
         <div class="right">
           <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
-          <a id="btn-roster-list-refresh" href="#" class="link icon-only"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+          <a id="btn-fines-list-refresh" href="#" class="link icon-only"><i class="fa fa-refresh" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
-    <a href="roster_add.html" id="btn-show-add-roster" class="floating-button color-pink" style="margin-bottom:43px;"><i class="icon icon-plus"></i></a>
     <form data-search-list=".virtual-list" class="searchbar searchbar-init">
       <div class="searchbar-input">
         <input type="search" placeholder="Search"/><a href="#" class="searchbar-clear"></a>
