--- a/team_management.html
+++ b/team_management.html
@@ -26,10 +26,11 @@
       <div class="ks-grid">
         <div class="row no-gutter">
           <div class="col-50"><a href="#" id="btn-roster"><img src="img/flat-roster.png" class="img-responsive icon-sports" alt="" /></a></div>
-          <div class="col-50"><a href="#" id="btn-tournament"><img src="img/flat-calendar.png" class="img-responsive icon-sports" alt="" /></a></div>
+          <div class="col-50"><a href="#" id="btn-tournament"><img src="img/flat-clock.png" class="img-responsive icon-sports" alt="" /></a></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-100"><a href="team_stats.html" id="btn-statistics"><img src="img/flat-stats.ico" class="img-responsive icon-sports" alt=""/></a></div>
+          <div class="col-50"><a href="team_stats.html" id="btn-statistics"><img src="img/flat-stats.png" class="img-responsive icon-sports" alt=""/></a></div>
+          <div class="col-50"><a href="fines_list.html" id="btn-fines"><img src="img/flat-fine.png" class="img-responsive icon-sports" alt=""/></a></div>
         </div>
       </div>
     </div>
@@ -40,6 +41,8 @@
         <a id="link_index" href="tournament_list.html" class="link"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>
 </a>
         <a href="team_stats.html" class="link"><i class="fa fa-line-chart fa-lg" aria-hidden="true"></i>
+</a>
+        <a href="fines_list.html" class="link"><i class="fa fa-bullhorn fa-lg" aria-hidden="true"></i></i>
 </a>
       </div>    
     </div>
