--- a/tournament_list.html
+++ b/tournament_list.html
@@ -39,6 +39,8 @@
 </a>
         <a href="team_stats.html" class="link"><i class="fa fa-line-chart fa-lg" aria-hidden="true"></i>
 </a>
+        <a href="fines_list.html" class="link"><i class="fa fa-bullhorn fa-lg" aria-hidden="true"></i></i>
+</a>
       </div>    
     </div>
   </div>
