--- a/roster_tournament_stats.html
+++ b/roster_tournament_stats.html
@@ -5,6 +5,9 @@
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
         <div id="lbl-roster-statistics" class="center"></div>
         <div class="right">
+          <a href="#" id="btn-delete-tournament-roster" class="link icon-only">
+            <i class="fa fa-trash-o" aria-hidden="true"></i>
+          </a>
           <a href="#" id="btn-edit-roster-stats" class="link icon-only">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
           </a>
