--- a/edit_tournament_stats.html
+++ b/edit_tournament_stats.html
@@ -80,7 +80,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li id="li-opp-assists">
             <div class="item-content">
               <div class="item-inner"> 
                 <div id="lbl-edit-opp-assists" class="item-title label"></div>
