--- a/voting_result.html
+++ b/voting_result.html
@@ -5,6 +5,7 @@
         <div class="left"><a id="btn-back-tour-det" href="#" class="link icon-only"><i class="icon icon-back"></i></a></div>
         <div id="lbl-mvp-result" class="center"></div>
         <div class="right">
+          <a href="#" onclick="getMVPImage();" class="link icon-only"><i class="fa fa-camera" aria-hidden="true"></i></a>
           <a href="#" class="link icon-only popop-voting-result"><i class="fa fa-share" aria-hidden="true"></i></a>
         </div>
       </div>
