--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -4,13 +4,13 @@
       <div class="ks-grid" style="margin-top:50px;">
         <div class="content-block">
           <div class="row no-gutter">
-            <div class="col-33" style="padding:0px; margin:0px;"><img id="img-tournament-det-team-image" src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
+            <div class="col-33" style="padding:0px; margin:0px;"><img id="img-tournament-det-team-image" src="img/envp-icon.png" class="img-circle" style="width:90px; height:90px;"/></div>
             <div class="col-33" style="padding:0px; margin:0px;">
               <p id="tournament-status" style="color:white; margin-bottom:0px;"></p>
               <p style="color:white; margin-top:0px;"><font id="tournament-score" size="3"></font></p>
               <p style="color:white; margin-top:0px;"><font id="tournament-win-lose" size="2"></font></p>
             </div>
-            <div class="col-33" style="padding:0px; margin:0px;"><img id="img-tournament-det-opp-image" src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
+            <div class="col-33" style="padding:0px; margin:0px;"><img id="img-tournament-det-opp-image" src="img/envp-icon.png" class="img-circle" style="width:90px; height:90px;"/></div>
           </div>
         </div>
       </div>
