--- a/choose_sports.html
+++ b/choose_sports.html
@@ -4,6 +4,7 @@
       <div class="navbar-inner">
         <div class="left">
           <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
+          <img src="img/envp-icon-40-40.png">
         </div>
         <div id="lbl-choose-sports" class="center"></div>
         <div class="right">
