--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/envyp.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/envp-icon-40-40.png">
     <link href="css/font.css" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"> -->
 
