--- a/choose_sports.html
+++ b/choose_sports.html
@@ -4,7 +4,7 @@
       <div class="navbar-inner">
         <div class="left">
           <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
-          <img src="img/envp-icon-40-40.png">
+          <img src="img/envp-icon-hdpi.png" style="padding-left:10px; width:30px; height:40px;">
         </div>
         <div id="lbl-choose-sports" class="center"></div>
         <div class="right">
