--- a/main.html
+++ b/main.html
@@ -49,6 +49,13 @@
               <li>
                 <div class="item-content">
                   <div class="item-inner"> 
+                    <div class="item-title"><a id="btn-my-teams" href="my_team_list.html" class="link icon-only"></a></div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="item-content">
+                  <div class="item-inner"> 
                     <div class="item-title"><a id="btn-edit-profile" href="#" class="link icon-only"></a></div>
                   </div>
                 </div>
