--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="theme-color" content="#2196f3">
     <title>Envp</title>
-    <link rel="stylesheet" href="css/framework7.ios.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.css">
+    <link rel="stylesheet" href="css/framework7.material.css">
+    <link rel="stylesheet" href="css/framework7.material.colors.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/envyp.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -72,6 +72,13 @@
                 <div class="item-content">
                   <div class="item-inner"> 
                     <div class="item-title"><a id="btn-choose-language" href="#" onClick="chooseLanguage();" class="link icon-only"></a></div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="item-content">
+                  <div class="item-inner"> 
+                    <div class="item-title"><a id="btn-settings" href="settings.html" class="link icon-only"></a></div>
                   </div>
                 </div>
               </li>
