--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -20,6 +20,7 @@
         </div>
         <div id="tournament-name" class="center" style="padding-top:150px;"></div>
         <div class="right" style="padding-bottom:150px;">
+          <a id="btn-tournament-refresh" href="#" class="link icon-only"><i class="fa fa-refresh" aria-hidden="true"></i></a>
           <a href="#" class="link  icon-only popop-tournament-options"><i class="icon icon-bars"></i></a>
         </div>
       </div>
