--- a/roster_detail.html
+++ b/roster_detail.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+      <div style="width:100%; background-color:#34495E; padding-top:20px; padding-bottom:10px;">
         <img id="roster-detail-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
         <center><p id="roster-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="roster-detail-position" style="color:white; margin-top:0px;"></p></center>
@@ -56,6 +56,22 @@
                 <div class="item-inner"> 
                   <div id="lbl-roster-det-redcard" class="item-title"></div>
                   <div id="roster-redcard" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-det-votes" class="item-title"></div>
+                  <div id="roster-votes" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-roster-det-mvp" class="item-title"></div>
+                  <div id="roster-mvp" class="item-after"></div>
                 </div>
               </div>
             </li>
