--- a/team_stats.html
+++ b/team_stats.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+      <div style="width:100%; background-color:#34495E; padding-top:20px; padding-bottom:10px;">
         <img id="img-team-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
         <center><p id="p-team-name" style="font-size:17px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
       </div>
@@ -18,8 +18,24 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
+                  <div id="lbl-team-games" class="item-title"></div>
+                  <div id="team-games" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner"> 
                   <div id="lbl-team-stats-points" class="item-title"></div>
                   <div id="team-ppg" class="item-after"></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner"> 
+                  <div id="lbl-team-stats-opp-points" class="item-title"></div>
+                  <div id="team-oppg" class="item-after"></div>
                 </div>
               </div>
             </li>
