--- a/tournament_edit.html
+++ b/tournament_edit.html
@@ -11,7 +11,7 @@
     </div>
     <div class="page-content" style="padding-top:50px;">
         <div id="lbl-edit-tournament-image" class="content-block-title"></div>
-        <div class="list-block inputs-list" style="padding-bottom:0px; margin-bottom:0px;">
+        <!-- <div class="list-block inputs-list" style="padding-bottom:0px; margin-bottom:0px;">
           <ul>
             <li>
               <div class="item-content" style="padding-left:0px; margin-left:5px; margin-right:5px;">
@@ -22,6 +22,9 @@
               <br />
             </li>
           </ul>
+        </div> -->
+        <div onclick="editTournamentImage();">
+          <img id="edit-tournament-image" src="img/envp-icon-ldpi.png" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div id="lbl-edit-tournament-details" class="content-block-title" style="padding-top:0px;"></div>
         <div class="list-block inputs-list">
