--- a/team_stats.html
+++ b/team_stats.html
@@ -39,7 +39,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li id="li-team-stats-assists">
               <div class="item-content">
                 <div class="item-inner"> 
                   <div id="lbl-team-stats-assists" class="item-title"></div>
