--- a/team_management.html
+++ b/team_management.html
@@ -3,8 +3,8 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left">
-          <!-- <a href="team_list.html" class="link icon-only"><i class="icon icon-back"></i></a> -->
-          <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
+          <a href="#" id="btn-team-manage-back" class="link icon-only"><i class="icon icon-back"></i></a>
+          <!-- <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a> -->
         </div>
         <div id="header-team-name" class="center"></div>
         <!-- <div class="right"></div> -->
